<resources>
    <string name="app_name">Donation.1.0</string>

    <!-- Views screen -->
    <string name="action_settings">Settings</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>

    <!-- Composable screen -->
    <string name="title_activity_main">MainActivity</string>
    <string name="happy_birthday_sam">Happy Birthday Sam!</string>
    <string name="signature_text">From Emma</string>

    <string name="title_activity_post_compose">PostComposeActivity</string>
    <string name="title_jetpack_compose_tutorial">Jetpack Compose tutorial</string>
    <string name="compose_short_desc">Jetpack Compose is a modern toolkit for building native Android UI. Compose simplifies and accelerates UI development on Android with less code, powerful tools, and intuitive Kotlin APIs.</string>
    <string name="compose_long_desc">In this tutorial, you build a simple UI component with declarative functions.
        You call Compose functions to say what elements you want and the Compose compiler does the rest.
        Compose is built around Composable functions. These functions let you define your app\'s UI programmatically because
        they let you describe how it should look and provide data dependencies, rather than focus on the process of the UI\'s
        construction, such as initializing an element and then attaching it to a parent. To create a Composable function, you
        add the @Composable annotation to the function name.</string>

    <string name="title_activity_task_completed">TaskCompletedActivity</string>
    <string name="all_task_completed">All tasks completed</string>
    <string name="nice_work">Nice work!</string>
    <string name="title_activity_compose_quadrant">ComposeQuadrantActivity</string>

    <!-- Compose Quadrant screen -->
    <string name="first_title">Text composable</string>
    <string name="first_description">Displays text and follows the recommended Material Design guidelines.</string>
    <string name="second_title">Image composable</string>
    <string name="second_description">Creates a composable that lays out and draws a given Painter class object.</string>
    <string name="third_title">Row composable</string>
    <string name="third_description">A layout composable that places its children in a horizontal sequence.</string>
    <string name="fourth_title">Column composable</string>
    <string name="fourth_description">A layout composable that places its children in a vertical sequence.</string>
</resources>